# twitter_plays_pyboy

./: .gitignore  README.md  pyproject.toml
tests/: test_twitter_plays_pyboy.py
tpp_twitter/: __init__.py  __main__.py  twitter.py
twitter_plays_pyboy/: __init__.py  __main__.py  constants.py  screenshot.py
twitter_plays_pyboy/games/: __init__.py  base.py  super_mario_land.py
