[tool.poetry]
name = "twitter_plays_pyboy"
version = "0.1.0"
description = "An easy-to-use wrapper around PyBoy designed for @TextOnlyGameBoy."
authors = ["Kyle Anthony Williams <kyle.anthony.williams2@gmail.com>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.7"
pyboy = "^1.3.0"
Pillow = "^8.1.0"
python-dotenv = {version = "^0.15.0", optional = true}
tweepy = {version = "^3.10.0", optional = true}
schedule = {version = "^0.6.0", optional = true}

[tool.poetry.extras]
twitter = ["python-dotenv","tweepy"]

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.790"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
